--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AddDomainActivity"/>
+        <activity android:name=".AddDomainActivity" />
         <activity android:name=".DomainsActivity"/>
-        <activity android:name=".IntroActivity">
-        </activity>
-        <activity android:name=".LoginActivity">
-        </activity>
+        <activity android:name=".IntroActivity" />
+        <activity android:name=".LoginActivity" />
     </application>
 
 </manifest>
