--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -18,6 +19,8 @@
         android:required="false"/>
 
     <application
+        android:configChanges="keyboardHidden|orientation"
+        android:screenOrientation="landscape"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,16 +28,21 @@
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
             android:name=".IntroActivity"
-            android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AddDomainActivity" />
+        <activity android:name=".AddDomainActivity"/>
         <activity android:name=".DomainsActivity"/>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".LoginActivity"/>
+        <activity
+            android:name=".MainCameraActivity"
+            android:label="@string/app_name" />
+        <activity android:name=".TrainingActivity"
+                  android:label="@string/app_name"/>
     </application>
 
 </manifest>
