--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,14 @@
         android:required="false"/>
 
     <application
-        android:configChanges="keyboardHidden|orientation"
-        android:screenOrientation="landscape"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
             android:name=".IntroActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -35,14 +35,29 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AddDomainActivity"/>
-        <activity android:name=".DomainsActivity"/>
-        <activity android:name=".LoginActivity"/>
         <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".AddDomainActivity"/>
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".DomainsActivity"/>
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".LoginActivity"/>
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
             android:name=".MainCameraActivity"
             android:label="@string/app_name" />
-        <activity android:name=".TrainingActivity"
-                  android:label="@string/app_name"/>
+
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".TrainingActivity"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
