--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:screenOrientation="landscape"
             android:name=".MainCameraActivity"
             android:label="@string/app_name" />
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".SavePersonActivity"/>
 
     </application>
 
