--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".IntroActivity"
+            android:name=".activity.IntroActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -38,24 +38,29 @@
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".AddDomainActivity"/>
+            android:name=".activity.AddDomainActivity"/>
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".DomainsActivity"/>
+            android:name=".activity.DomainsActivity"/>
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".LoginActivity"/>
+            android:name=".activity.LoginActivity"/>
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".MainCameraActivity"
+            android:name=".activity.MainCameraActivity"
             android:label="@string/app_name" />
         <activity
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="landscape"
-            android:name=".SavePersonActivity"/>
+            android:name=".activity.TrainingActivity"
+            android:label="@string/app_name" />
+        <activity
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape"
+            android:name=".activity.SavePersonActivity"/>
 
     </application>
 
